<resources>
    <string name="app_name">XingFuDemo</string>
    <string name="search_condition">查询条件</string>
    <string name="insurance_policy_num">保单号</string>
    <string name="ipolicy_holder_name">投保人姓名</string>
    <string name="ipolicy_status">保单状态</string>
    <string name="ipolicy_receipt_status">回执状态</string>
    <string name="ipolicy_apply_date">申请日期</string>
    <string name="ipolicy_effect_date">生效日期</string>
    <string name="ipolicy_receipt_date">回执日期</string>
    <string name="zhi">至</string>
    <string name="search_warning">注：查询时间不超过一年</string>
    <string name="search">查询</string>
    <string name="mainInsuranceName">主险名称</string>
    <string name="insuranceNum">保单号</string>
    <string name="insurancedPeople">被保人</string>
    <string name="coverage">保额</string>
    <string name="premium">保费</string>
    <string name="insurancedPolicyStatus">投保状态</string>
    <string name="receipt_status">回执状态</string>
    <string name="paymentPeriod">缴费期限</string>
    <string name="paymentWay">缴费方式</string>
    <string name="paymentEndDate">缴至日期</string>
    <string name="statusDeception">状态说明</string>
    <string name="changePassword">修改密码</string>
    <string name="shareMachine">设备共享</string>
    <string name="insurancedClientManagement">已承保客户管理</string>
    <string name="birthdayTip">生日提醒</string>
    <string name="birthdayInFiveDay">近五日内共有</string>
    <string name="birthdayClient">位客户过生日</string>
    <string name="clickForMore">点击查询详情</string>
    <string name="basicInformation">基础信息</string>
    <string name="xf_3rd_name">姓名</string>
    <string name="mustInput">必填项</string>
    <string name="xf_3rd_birthday">出生日期</string>
    <string name="xf_3rd_age">年龄</string>
    <string name="xf_3rd_sex">性别</string>
    <string name="jobName">职业名称</string>
    <string name="jobCode">职业代码</string>
    <string name="IDType">证件类型</string>
    <string name="IDNum">证件号码</string>
    <string name="IDValidity">证件有效期</string>
    <string name="income">年收入</string>
    <string name="education">学历</string>
    <string name="maritalStatus">婚姻状况</string>
    <string name="xf_3rd_hobby">爱好</string>
    <string name="call">称呼</string>
    <string name="specialAnniversary">特殊纪念日</string>
    <string name="clientLevel">准客户等级</string>
    <string name="country">国家或地区</string>
    <string name="wanted">是否为招募对象</string>
    <string name="true_String">是</string>
    <string name="false_String">否</string>
    <string name="wan">万</string>
    <string name="clientChoice">账户倾向选择</string>
    <string name="selectAll">全选</string>
    <string name="familyAddr">家庭地址信息</string>
    <string name="area">地区</string>
    <string name="province">省</string>
    <string name="city">城市</string>
    <string name="city_co">市</string>
    <string name="xf_3rd_address">详细地址</string>
    <string name="address_input">请输入详细地址</string>
    <string name="riskAccount">风险账户</string>
    <string name="savingsAccount">储存账户</string>
    <string name="retirementAccount">退休账户</string>
    <string name="medicalAccount">医疗账户</string>
    <string name="financialAccount">理财账户</string>
    <string name="assetManagementAccount">资产管理账户</string>
    <string name="detailInfo">明细</string>
    <string name="occurrenceProject">发生项目：</string>
    <string name="occurrenceAmount">发生金额：</string>
    <string name="settlementDate">结算日期：</string>
    <string name="clearingRate">结算利率：</string>
    <string name="yuan">元</string>
    <string name="insuranceName">险种名称：</string>
    <string name="policyHolderName">投保人姓名：</string>
    <string name="insurancedPeopleName">被保人姓名：</string>
    <string name="firstYearPay">首年规模保费：</string>
    <string name="firstYearStander">首年标准保费：</string>
    <string name="settleDate">受理日期：</string>
    <string name="workingDateMao">生效日期：</string>
    <string name="clientReturnDate">客户回执日期：</string>
    <string name="insuranceNumMao">保单号：</string>
    <string name="insurancedPeopleMao">被保人：</string>
    <string name="backToLastPage">返回上一页</string>
    <string name="holdPolicy">持有保单</string>
    <string name="policyHolder">投保人</string>
    <string name="workingDate">生效日期</string>
    <string name="searchCondition">查询条件</string>
    <string name="agentCode">代理人编码：</string>
    <string name="clientName">客户姓名</string>
    <string name="pleaseChoice">请选择</string>
    <string name="VIPLevel">VIP等级</string>
    <string name="contactNumber">联系电话</string>
    <string name="postCode">邮政编码</string>
    <string name="contactAddress">联系地址</string>

    <string name="monthFrom">起始月度</string>
    <string name="monthEnd">截止月度</string>
    <string name="payTime">发放年月</string>
    <string name="mechanismCoding">机构编码</string>
    <string name="workTitle">职称名称</string>
    <string name="moreInfo">详细信息</string>
    <string name="actualAmount">实发金额</string>

    <string name="accumulativePayment">累计缴费</string>
    <string name="cumulativeCollection">累计领取</string>
    <string name="initialAccountBalance">期初账户余额</string>
    <string name="accountCashBalance">账户现金余额</string>

    <string name="settlementDateNoMao">结算日期</string>
    <string name="xf_3rd_cancel">取消</string>
    <string name="confirm">确定</string>


    <string name="insurancePlan">保险计划</string>
    <string name="mainInsuranceNameMao">主险名称：</string>
    <string name="basicCoverage">基本保额／份数</string>
    <string name="paymentPeriod2">交费期间</string>
    <string name="insurancePeriod">保险期间</string>
    <string name="payTimes">交费次数</string>
    <string name="addMainInsurance">添加主险</string>
    <string name="firstPaymentSum">首期保费合计</string>


    <string name="suggestionPeople">建议人名称</string>
    <string name="contentSetting">内容设置</string>
    <string name="makingPDF">生成PDF</string>
    <string name="every_premium">每期保费</string>
    <string name="premium_num">份数</string>
    <string name="insurancePeriod2">保险期限</string>
    <string name="payPeriod">缴费期限</string>
    <string name="payWay">缴费方式</string>


    <string name="dlt_tishi">保单号：</string>
    <string name="dlt_tishi1">温馨提示：</string>
    <string name="dlt_tishi2">如果当前无可扫描的投保单条形码可点击跳转按钮直</string>
    <string name="dlt_tishi3">接进行下一步录像完成后可于任务列表页面补充扫描。</string>
    <string name="dlt_tishi4">中科软科技股份有限公司</string>
    <string name="dlt_tishi5">缓存建议网络不好时开启</string>
    <string name="dlt_tishi6">采集中</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
