<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childV"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/viewTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layerType="software"
        android:background="@drawable/xf_third_dash_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingLeft="38.7dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/ipolicy_apply_dateTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ipolicy_apply_date" />

            <TextView
                android:id="@+id/ipolicy_apply_date_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="51.3dp"
                tools:text="幸福喜乐年金保险" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/ipolicy_effect_dateTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ipolicy_effect_date" />

            <TextView
                android:id="@+id/ipolicy_effect_date_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50.7dp"
                tools:text="FX2678361287" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:paddingLeft="38.7dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ipolicy_receipt_dateTitle"
            style="@style/XF_Third_MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ipolicy_receipt_date" />

        <TextView
            android:id="@+id/ipolicy_receipt_date_searched"
            style="@style/XF_Third_MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="51.3dp"
            tools:text="幸福喜乐年金保险" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/receipt_statusTitle"
            style="@style/XF_Third_MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/receipt_status" />

        <TextView
            android:id="@+id/receipt_status_searched"
            style="@style/XF_Third_MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50.7dp"
            tools:text="FX2678361287" />
    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingLeft="38.7dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/paymentPeriodTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/paymentPeriod" />

            <TextView
                android:id="@+id/paymentPeriod_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="51.3dp"
                tools:text="幸福喜乐年金保险" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/paymentWayTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/paymentWay" />

            <TextView
                android:id="@+id/paymentWay_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50.7dp"
                tools:text="FX2678361287" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="26.7dp"
        android:paddingLeft="38.7dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/paymentEndDateTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/paymentEndDate" />

            <TextView
                android:id="@+id/paymentEndDate_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="51.3dp"
                tools:text="幸福喜乐年金保险" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/statusDeceptionTitle"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/receipt_status" />

            <TextView
                android:id="@+id/statusDeception_searched"
                style="@style/XF_Third_MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50.7dp"
                tools:text="FX2678361287" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>